FAQ and some footer alignment and FAQ button, some gdpr consistency fixes

--- a/frontend-public/src/styles/layout/footer.css
+++ b/frontend-public/src/styles/layout/footer.css
@@ -79,3 +79,6 @@
 .mobile {
   display: none;
 }
+.faq-link {
+  color: #1e1e1e;
+}
